chp13_replicasets/set1333_remove_pod_from_rs/SETUP/common/ing.kiada.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiada
  namespace: chp13-set1333
spec:
  tls:
  - secretName: tls-example-com
    hosts:
    - "*.example.com"
  rules:
  - host: kiada.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiada
            port:
              name: http
  - host: api.example.com
    http:
      paths:
      - path: /quote
        pathType: Exact
        backend:
          service:
            name: quote
            port:
              name: http
      - path: /questions
        pathType: Prefix
        backend:
          service:
            name: quiz
            port:
              name: http
